update docker files and readme

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "docker:ubuntu22.04:image": "docker build -t oqs-openssh:ubuntu22.04 ./ubuntu22.04",
     "docker:ubuntu22.04:build": "docker run -it --rm -v $INIT_CWD/ubuntu22.04/packages:/packages oqs-openssh:ubuntu22.04",
     "docker:ubuntu20.04:image": "docker build -t oqs-openssh:ubuntu20.04 ./ubuntu20.04",
-    "docker:ubuntu20.04:build": "docker run -it --rm -v $INIT_CWD/ubuntu20.04/packages:/packages oqs-openssh:ubuntu20.04",
+    "docker:ubuntu20.04:build": "sudo docker run -it --rm -v ~/oqs-ubuntu-installer-packages/ubuntu20.04/packages:/packages oqs-openssh:ubuntu20.04",
+    "docker:ubuntu20.04:debug": "docker run -dt --name ubuntu20.04 oqs-openssh:ubuntu20.04 tail -f /dev/null && docker exec -it ubuntu20.04 /bin/bash",
     "docker:ubuntu18.04:image": "docker build -t oqs-openssh:ubuntu18.04 ./ubuntu18.04",
     "docker:ubuntu18.04:build": "docker run -it --rm -v $INIT_CWD/ubuntu18.04/packages:/packages oqs-openssh:ubuntu18.04",
     "docker:debian10:image": "docker build -t oqs-openssh:debian10 ./debian10",
